--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,21 +1,24 @@
 .container {
-  min-height: 100vh;
-  width: 100%;
+  max-width: 100%;
+  height: 100vh;
   background-color: #18181b;
-  padding: 2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.game {
+  width: 100%;
   display: grid;
   grid-template-areas:
     "heading"
     "restart"
     "grid";
   align-items: center;
+  gap: 2em;
+  padding: 1em;
   justify-content: center;
   justify-items: center;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto 1fr;
   grid-template-columns: 1fr;
-}
-
-@media (min-width: 700px) {
-  .container {
-  }
 }
