removed unnecesary variables

--- a/src/components/grid/grid.module.scss
+++ b/src/components/grid/grid.module.scss
@@ -36,7 +36,7 @@
     background-color: var(--color-background-primary);
   }
 
-  @media (min-width: 50rem) {
+  @media (min-width: 800px) {
     width: 6rem;
     height: 6rem;
   }
