--- a/src/components/grid/grid.module.scss
+++ b/src/components/grid/grid.module.scss
@@ -1,4 +1,10 @@
 .grid {
+  position: relative;
+  width: 80vw;
+  height: 80vw;
+  max-width: 25rem;
+  max-height: 25rem;
+  margin: 3em auto;
   grid-area: grid;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -6,26 +12,42 @@
   place-items: center;
   padding: 1.5em;
   gap: 1.5em;
-  background-color: var(--color-background-secondary);
-  border-radius: 9px;
-  border: 3px solid transparent;
+  background-color: #1e1818;
+  border-radius: 6px;
+  &:hover {
+    border: 2px solid transparent;
+  }
   &Border {
     composes: grid;
-    border: 3px solid var(--color-secondary);
+    border: 2px solid #76d1b0;
+  }
+}
+
+.restartOverlay {
+  z-index: 10;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all ease-in-out 250ms;
+  &:hover {
+    background: #201a1acd;
   }
 }
 
 .light {
   display: block;
-  width: 3.5rem;
-  height: 3.5rem;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   cursor: pointer;
   border: 2px solid transparent;
-  transition: all 200ms;
+  transition: all 250ms;
   &:hover {
     transition: all 200ms;
-    border: 2px solid var(--color-white);
+    border: 2px solid #ffffff;
   }
   &Active {
     composes: light;
@@ -34,10 +56,5 @@
   &Disabled {
     composes: light;
     background-color: var(--color-background-primary);
-  }
-
-  @media (min-width: 800px) {
-    width: 6rem;
-    height: 6rem;
   }
 }
