--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,7 +1,7 @@
 .container {
   max-width: 100%;
   height: 100vh;
-  background-color: #18181b;
+  background-color: var(--color-background-secondary);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -9,13 +9,7 @@
 
 .game {
   width: 100%;
-  display: grid;
-  grid-template-areas:
-    "heading"
-    "restart"
-    "grid";
-  align-items: center;
-  gap: 2em;
+  gap: 0.5em;
   padding: 1em;
   justify-content: center;
   justify-items: center;
