--- a/src/components/heading/heading.module.scss
+++ b/src/components/heading/heading.module.scss
@@ -3,6 +3,7 @@
   text-align: center;
   color: #cac9c9;
   font-size: 4rem;
+  margin-top: 0.5em;
   font-weight: 900;
   line-height: 1.2;
   .accent {
