--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,10 +1,27 @@
 .container {
-  max-width: 100%;
-  height: 100vh;
-  background-color: var(--color-background-secondary);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 45rem;
+  min-height: 100%;
+  padding: 1em;
+  color: white;
+}
+
+.overlay {
+  position: absolute;
+  min-height: 100%;
+  width: 100%;
+  max-width: 45rem;
+  opacity: 0.85;
+  top: 0;
+  z-index: 20;
+  color: white;
+  font-size: 1.1rem;
+  border-radius: 6px;
+  & div {
+    overflow-y: scroll;
+    padding: 2em;
+  }
 }
 
 .game {
