--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,17 +2,22 @@
 
 :root {
   --color-primary: #acb2c9;
-  --color-secondary: #36D399;
+  --color-secondary: #36d399;
   --color-white: #d2e6d6;
-  --color-background-primary: #F87272;
+  --color-background-primary: #f87272;
   --color-background-secondary: #171212;
 }
 
 html,
 body {
   font-family: "Hanken Grotesk", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
+}
+
+body {
+  display: flow-root;
+  background-color: var(--color-background-secondary);
 }
 
 a {
