--- a/src/components/grid/grid.module.scss
+++ b/src/components/grid/grid.module.scss
@@ -13,29 +13,20 @@
   padding: 1.5em;
   gap: 1.5em;
   background-color: #1e1818;
-  border: 3px solid transparent;
   border-radius: 6px;
-  &:hover {
-    border: 3px solid transparent;
-  }
+  transition: all 250ms;
   &Border {
     composes: grid;
-    border: 3px solid #49816c;
+    transition: all 250ms;
+    border: 2px solid rgb(58,191,248);
   }
-}
+} 
 
-.restartOverlay {
+.restart {
   z-index: 10;
   position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all ease-in-out 250ms;
-  &:hover {
-    background: #201a1acd;
-  }
+  top: -2rem;
+  right: -2rem;
 }
 
 .light {
