--- a/src/components/heading/heading.module.scss
+++ b/src/components/heading/heading.module.scss
@@ -3,7 +3,6 @@
   text-align: center;
   color: #cac9c9;
   font-size: 4rem;
-  margin-top: 0.5em;
   font-weight: 900;
   line-height: 1.2;
   .accent {
@@ -17,7 +16,7 @@
   .accentSolved {
     display: block;
     font-size: 72px;
-    background: -webkit-linear-gradient(left, hsl(164.23,72.9%,41.96%), hsl(175,72.9%,41.96%));
+    background: -webkit-linear-gradient(left, hsl(164.23,72.9%,41.96%), rgb(58,191,248));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; 
   }
