--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -2,7 +2,10 @@
   width: 100%;
   margin: 0 auto;
   max-width: 45rem;
-  min-height: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 1em;
   color: white;
 }
