--- a/src/components/grid/grid.module.scss
+++ b/src/components/grid/grid.module.scss
@@ -1,4 +1,9 @@
 .grid {
+  width: 70vw;
+  height: 70vw;
+  max-width: 25rem;
+  max-height: 25rem;
+  margin-top: 2.5em;
   grid-area: grid;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -6,26 +11,40 @@
   place-items: center;
   padding: 1.5em;
   gap: 1.5em;
-  background-color: var(--color-background-secondary);
-  border-radius: 9px;
-  border: 3px solid transparent;
+  border-radius: 0.75rem;
+  border: 2px solid #000;
+  box-shadow: 8px 8px 0px 0px #000;
+
+  background-color: #f7e8d8;
+
+  border-radius: 15px;
+  padding: 20px;
+  color: black;
   &Border {
     composes: grid;
-    border: 3px solid var(--color-secondary);
+    border-radius: 0.75rem;
+    border: 2px solid #4d8249;
+    box-shadow: 8px 8px 0px 0px #4d8249;
   }
+}
+
+.gridBorder {
+  position: relative;
 }
 
 .light {
   display: block;
-  width: 3.5rem;
-  height: 3.5rem;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   cursor: pointer;
-  border: 2px solid transparent;
+  border: 2px solid #000;
+
   transition: all 200ms;
   &:hover {
     transition: all 200ms;
-    border: 2px solid var(--color-white);
+    border: 2px solid #000;
+    box-shadow: 2px 2px 0px 0px #000;
   }
   &Active {
     composes: light;
@@ -35,9 +54,10 @@
     composes: light;
     background-color: var(--color-background-primary);
   }
+}
 
-  @media (min-width: 800px) {
-    width: 6rem;
-    height: 6rem;
-  }
+.restart {
+  position: absolute;
+  top: -1.5rem;
+  right: -1.5rem;
 }
