--- a/src/components/restartButton/restartButton.module.scss
+++ b/src/components/restartButton/restartButton.module.scss
@@ -1,21 +1,18 @@
+
+
 .btnRestart {
   grid-area: restart;
-  background-color: var(--color-primary);
-  color: var(--color-white);
+  background-color: #4d8249;
+  color: var(--color-secondary);
   border-radius: 7px;
   font-size: 3rem;
   cursor: pointer;
-  transition: all 250ms;
-  border: none;
-  position: relative;
-  bottom: 0px;
+  border: 2px solid transparent;
+  transition: all 100ms;
+  box-sizing: border-box;
   &:hover {
-    transition: all 250ms;
-    bottom: 7px;
-  }
-  &:focus {
-    transition: all 250ms;
-    background-color: var(--color-secondary);
+    border: 2px solid #000;
+    box-shadow: 2px 2px 0px 0px #000;
   }
   &Hidden {
     visibility: none;
