--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,19 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url(https://fonts.googleapis.com/css?family=IBM+Plex+Mono:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic);
 
 :root {
-  --color-primary: #DB1D70;
-  --color-secondary: #E24A8D;
-  --color-white: #EBE8E9;
-  --color-background-primary: #18181B;
+  --color-primary: #db1d70;
+  --color-secondary: #a7ff9f;
+  --color-white: #ebe8e9;
+  --color-background-primary: #ff9f9f;
   --color-background-secondary: #242428;
 }
 
 html,
 body {
-  font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  height: 100%;
+  font-family: "IBM Plex Mono", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  min-height: 100%;
   width: 100%;
-  
+}
+
+body {
+  background-color: #fff2e4;
 }
 
 a {
@@ -33,7 +36,7 @@ h3,
 input,
 button {
   margin: 0;
-  font-family: "Inter";
+  font-family: "IBM Plex Mono";
 }
 
 .text-white {
