--- a/src/components/grid/grid.module.scss
+++ b/src/components/grid/grid.module.scss
@@ -26,7 +26,7 @@
     border: 2px solid #4d8249;
     box-shadow: 8px 8px 0px 0px #4d8249;
   }
-} 
+}
 
 .restart {
   z-index: 10;
@@ -45,8 +45,8 @@
   height: 100%;
   border-radius: 50%;
   cursor: pointer;
+  box-shadow: 2px 2px 0px 0px transparent;
   border: 2px solid #000;
-
   transition: all 200ms;
   &:hover {
     transition: all 200ms;
